Adjust errorprone plugin smoke test for Java 17